fix info text line wraps and max width

--- a/signup/css.css
+++ b/signup/css.css
@@ -6,6 +6,12 @@
  * Licensed under MIT 
  * Based on Bootstrap v3.3.4
 */
+
+.info-text {
+  max-width: 240px;
+  margin: auto;
+}
+
 /* Add custom CSS classes here 
  * 
  * img {
